<resources>
    <string name="app_name">DamApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DAM App</string>
    <string name="nav_header_subtitle">1100</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_about">About</string>
    <string name="todo">TODO</string>
    <string name="main_home_clicked">Home clicked</string>
    <string name="main_profile_clicked">Profile clicked</string>
    <string name="main_about_clicked">About clicked</string>


    <string name="add_invalid_date">Invalid date, accepted format dd-MM-yyyy</string>
    <string name="add_invalid_amount">Invalid amount</string>

    <string-array name="add_categories">
        <item>Food</item>
        <item>T-shirt</item>
        <item>Accessory</item>
        <item>Holiday</item>
    </string-array>

    <string name="add_save">Save</string>
    <string name="add_description">Description</string>
    <string name="add_category">Category:</string>
    <string name="add_amount">Amount</string>
    <string name="add_date">Date</string>

    <string name="profile_save">Save</string>
    <string name="profile_salary">Salary</string>
    <string name="profile_name">Name</string>
    <string name="about_team">Team: 1089, 1092 and 1100</string>
    <string name="about_year">Year: 2024</string>
    <string name="about_version">Version: v1.0.0</string>
    <string name="about_dam_app">DAM App</string>
</resources>